# learnNginx

./: CMakeLists.txt  main.cpp  nginx.conf
_include/: ngx_c_conf.h  ngx_func.h  ngx_global.h  ngx_log.h  ngx_signal.h
app/: ngx_c_conf.cpp  ngx_log.cpp  ngx_printf.cpp  ngx_setproctitle.cpp  ngx_string.cpp
signal/: ngx_signal.cpp
